[gd_scene load_steps=38 format=3 uid="uid://cbahvydnsmxhk"]

[ext_resource type="Script" uid="uid://dswws6fki1dgv" path="res://enemy_2.gd" id="1_fi5i3"]
[ext_resource type="Texture2D" uid="uid://bcvrka802tg26" path="res://assets/sprites/MiniHorseMan.png" id="2_oh86k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a4ywr"]
atlas = ExtResource("2_oh86k")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4auq"]
atlas = ExtResource("2_oh86k")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdqbe"]
atlas = ExtResource("2_oh86k")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2yeo"]
atlas = ExtResource("2_oh86k")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvrhm"]
atlas = ExtResource("2_oh86k")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxmbh"]
atlas = ExtResource("2_oh86k")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7du6s"]
atlas = ExtResource("2_oh86k")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dp05"]
atlas = ExtResource("2_oh86k")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82mwo"]
atlas = ExtResource("2_oh86k")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv1ai"]
atlas = ExtResource("2_oh86k")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mvye"]
atlas = ExtResource("2_oh86k")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n88sx"]
atlas = ExtResource("2_oh86k")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbuvh"]
atlas = ExtResource("2_oh86k")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v7lw"]
atlas = ExtResource("2_oh86k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8vbn"]
atlas = ExtResource("2_oh86k")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eqed"]
atlas = ExtResource("2_oh86k")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smvsi"]
atlas = ExtResource("2_oh86k")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bwrd"]
atlas = ExtResource("2_oh86k")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6do3i"]
atlas = ExtResource("2_oh86k")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjnyp"]
atlas = ExtResource("2_oh86k")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jmet"]
atlas = ExtResource("2_oh86k")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r53gs"]
atlas = ExtResource("2_oh86k")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_772e2"]
atlas = ExtResource("2_oh86k")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0atp2"]
atlas = ExtResource("2_oh86k")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a86bm"]
atlas = ExtResource("2_oh86k")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phn6v"]
atlas = ExtResource("2_oh86k")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a73yg"]
atlas = ExtResource("2_oh86k")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jc3m"]
atlas = ExtResource("2_oh86k")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f341w"]
atlas = ExtResource("2_oh86k")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fihk1"]
atlas = ExtResource("2_oh86k")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h57il"]
atlas = ExtResource("2_oh86k")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbe07"]
atlas = ExtResource("2_oh86k")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_52uuk"]
atlas = ExtResource("2_oh86k")
region = Rect2(160, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qypmd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4ywr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4auq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdqbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2yeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvrhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxmbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7du6s")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dp05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82mwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv1ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mvye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n88sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbuvh")
}],
"loop": true,
"name": &"die",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v7lw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8vbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eqed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smvsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bwrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6do3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjnyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jmet")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r53gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_772e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0atp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a86bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phn6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a73yg")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jc3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f341w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fihk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h57il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbe07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52uuk")
}],
"loop": true,
"name": &"run-lance",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_di7ta"]
size = Vector2(18, 25)

[node name="Enemy-2" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_fi5i3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.54688, 1.4375)
sprite_frames = SubResource("SpriteFrames_qypmd")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 8.5)
shape = SubResource("RectangleShape2D_di7ta")

[node name="Attacking_Timer" type="Timer" parent="."]

[node name="Visiable_Timer" type="Timer" parent="."]

[connection signal="timeout" from="Attacking_Timer" to="." method="_on_attacking_timer_timeout"]
[connection signal="timeout" from="Visiable_Timer" to="." method="_on_visiable_timer_timeout"]
